--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
     <script type="module" src="/src/day.ts"></script>
+    <script type="module" src="/src/date-fns.ts"></script>
   </body>
 </html>
