--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     <title>Vite + TS</title>
   </head>
   <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.ts"></script>
-    <script type="module" src="/src/day.ts"></script>
-    <script type="module" src="/src/date-fns.ts"></script>
+    <!-- <div id="app"></div> -->
+    <input type="text" id="calendar" placeholder="日時を選択してください">
+    <!-- <script type="module" src="/src/main.ts"></script> -->
+    <!-- <script type="module" src="/src/day.ts"></script>
+    <script type="module" src="/src/date-fns.ts"></script> -->
+    <script type="module" src="/src/flatpickr.ts"></script>
   </body>
 </html>
